@@ -9,5 +9,6 @@ Standards-Version: 3.2.1
 Package: scripts
 Architecture: all
 Depends: test, ruby1.8, build-essential
+Recommends: tk8.4 | wish
 Description: test lintian's script file checks
  Regression test lintian's script file checks.
